--- a/app/views/games/_form_games.html.erb
+++ b/app/views/games/_form_games.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="row">
+<div class="container my-3">
+  <div class="row row-cols-1 row-cols-md-2 g-4">
 
     <!-- Стандартна гра -->
-    <div class="col-md-6 mb-4">
-      <div class="card shadow-sm">
+    <div class="col">
+      <div class="card shadow-sm h-100">
         <div class="card-body">
           <h4 class="card-title"><%= t('.game_standart') %></h4>
           <ul class="list-group list-group-flush mb-3">
@@ -19,8 +19,8 @@
     </div>
 
     <!-- Кастомна гра -->
-    <div class="col-md-6 mb-4">
-      <div class="card shadow-sm">
+    <div class="col">
+      <div class="card shadow-sm h-100">
         <div class="card-body">
           <h4 class="card-title"><%= t('.game_custom') %></h4>
 
