field is compressed vertically

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,6 +5,7 @@
 <%= render 'form_games' %>
 
 <div class='mx-3'>
+  <ul class="text-success"><%= t('.string_0') %></ul>
   <ul><%= t('.string_1') %></ul>
   <ul><%= t('.string_2') %></ul>
   <ul><%= t('.string_3') %></ul>
