--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,13 @@
 @use "bootstrap" as *;
 
+.vertical-fit-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-height: 100vh; // Не превышает высоту окна
+  // overflow: hidden;  // Скрываем переполнение
+}
+
 .ascii-grid-container {
   display: flex;
   flex-direction: column;
@@ -22,4 +30,18 @@
   font-size: clamp(8px, 2.5vw, 20px);
   padding: 0;
 }
+
+.touch-controls {
+  display: none;
+
+  @media (hover: none) and (pointer: coarse) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+    gap: 0.5rem;
+  }
+}
+
+
 
