--- a/app/views/games/_field.html.erb
+++ b/app/views/games/_field.html.erb
@@ -1,10 +1,11 @@
+<div class="vertical-fit-container pb-2">
 <div id="field" class="ascii-block" data-game-over="<%= game_over %>">
   <% if @text_game_over %>
     <div class="fs-6 ms-2 mt-1">
       <span class="text-danger"><%= @text_game_over %></span>
       <% if @game.apples_count > 0 %>
         <br>
-        <span style="color: green;"><%= t('.text') %>: <%= @snake.count - 6 %></span>
+        <span class="text-success"><%= t('.text') %>: <%= @snake.count - 6 %></span>
       <% end %>
     </div>
   <% end %>
@@ -19,7 +20,7 @@
     <% end %>
   </div>
 
-  <div class="d-flex flex-column align-items-center mt-3 gap-2">
+  <div class="touch-controls">
     <div class="d-flex justify-content-center gap-2">
       <button class="btn btn-outline-primary btn-sm px-3" data-direction="up">↑</button>
     </div>
@@ -29,4 +30,6 @@
       <button class="btn btn-outline-primary btn-sm px-3" data-direction="right">→</button>
     </div>
   </div>
+
+</div>
 </div>
