--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-height: 100vh; // Не превышает высоту окна
-  // overflow: hidden;  // Скрываем переполнение
+  max-height: 100vh;
 }
 
 .ascii-grid-container {
