--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container my-3 px-2">
     <div class="border rounded p-2 w-100">
       <div class="d-flex justify-content-between align-items-center mb-2 flex-wrap gap-2">
-        <h5 class="mb-0 fw-semibold fs-6"><%= t('.text_title') %> :</h5>
+        <h5 class="mb-0 fw-semibold fs-6"><%= t('.text_title') %> : <%= t('.total_games') %> <%= @user.games.count %></h5>
         <%= link_to t('buttons.cancel'), games_path, class: "btn btn-sm btn-success" %>
       </div>
 
